[package]
name = "queue_experiments"
version = "0.1.0"
authors = ["Philip Hayes <philiphayes9@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
parking_lot = "0.10"
tokio = { version = "0.2.13", features = ["full"] }

[dev-dependencies]
criterion = "0.3.1"
heck = "0.3.1"
loom = { version = "0.2.15", features = ["futures"] }
tokio-test = "0.2.0"

[[bench]]
name = "bench"
harness = false
